--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Simple E-commerce</h1>
+        <h1>Sofia's Amazing Store</h1>
     </header>
     
     <main>
