[SOF-02] change header with a nice green

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My Simple E-commerce</h1>
+        <h1 class="carlos-rules">Carlos Rules</h1>
     </header>
     
     <main>
