[SOF-02] place  back header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="carlos-rules">Carlos Rules</h1>
+        <h1>Sofia's Amazing Store</h1>
     </header>
     
     <main>
